--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-spinners": "^0.13.8",
+    "resend": "^3.2.0",
+    "rsuite": "^5.60.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
